// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetoxSession edge cases should warn on .disconnect(<unknown connection>) 1`] = `
"DetoxInvariantError: cannot disconnect an unknown connection from the session aSession
Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues"
`;

exports[`DetoxSession edge cases should warn on .disconnect(null) 1`] = `
"DetoxInvariantError: DetoxSession(aSession).prototype.disconnect(connection) expects a non-null argument.
Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues"
`;

exports[`DetoxSession edge cases should warn on non-empty app assignment 1`] = `
"DetoxInvariantError: the app is already connected to the session aSession
Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues"
`;

exports[`DetoxSession edge cases should warn on non-empty tester assignment 1`] = `
"DetoxInvariantError: the tester is already connected to the session aSession
Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues"
`;
